--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Tiendita Doña Lucha</title>
+        <title>EStore</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="eCommerce HTML Template Free Download" name="keywords">
         <meta content="eCommerce HTML Template Free Download" name="description">
@@ -53,16 +53,16 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
-                            <a href="product-list.html" class="nav-item nav-link">Products</a>
-                            <a href="product-detail.html" class="nav-item nav-link">Product Detail</a>
+    <!--                     <a href="product-list.html" class="nav-item nav-link">Products</a>
+                         <a href="product-detail.html" class="nav-item nav-link">Product Detail</a>
                             <a href="cart.html" class="nav-item nav-link">Cart</a>
-                            <a href="checkout.html" class="nav-item nav-link">Checkout</a>
-                            <a href="my-account.html" class="nav-item nav-link">My Account</a>
+                            <a href="checkout.html" class="nav-item nav-link">Checkout</a> -->
+                            <a href="my-account.html" class="nav-item nav-link">Nosotros</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More Pages</a>
                                 <div class="dropdown-menu">
-                                    <a href="wishlist.html" class="dropdown-item">Wishlist</a>
-                                    <a href="login.html" class="dropdown-item">Login & Register</a>
+<!--                                     <a href="wishlist.html" class="dropdown-item">Wishlist</a>
+                                    <a href="login.html" class="dropdown-item">Login & Register</a> -->
                                     <a href="contact.html" class="dropdown-item">Contact Us</a>
                                 </div>
                             </div>
@@ -101,11 +101,11 @@
                     </div>
                     <div class="col-md-3">
                         <div class="user">
-                            <a href="wishlist.html" class="btn wishlist">
+                            <a href="#" class="btn wishlist">
                                 <i class="fa fa-heart"></i>
                                 <span>(0)</span>
                             </a>
-                            <a href="cart.html" class="btn cart">
+                            <a href="#" class="btn cart">
                                 <i class="fa fa-shopping-cart"></i>
                                 <span>(0)</span>
                             </a>
@@ -116,6 +116,19 @@
         </div>
         <!-- Bottom Bar End -->       
         
+        <div class="brand">
+            <div class="container-fluid">
+                <div class="brand-item"><img src="img/moda.jpg" alt=""></div>
+        </div>
+
+
+        <div class="brand">
+            <div class="container-fluid">
+             <h1>  Empresa líder en venta de ropa accesible en México, ofreciendo ropa y 
+                servicio de alta calidad, manteniendo al cliente y al personal que labora en ella en completa satisfacción. </h1>
+        </div>
+
+
         <!-- Main Slider Start -->
         <div class="header">
             <div class="container-fluid">
@@ -195,7 +208,7 @@
             </div>
         </div>
         <!-- Main Slider End -->      
-        
+
         <!-- Brand Start -->
         <div class="brand">
             <div class="container-fluid">
