--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         
         <div class="brand">
             <div class="container-fluid">
-                <div class="brand-item"><img src="img/moda.jpg" alt=""></div>
+                <div class="brand-item"><img src="img/moda3.jpg" height="500px" width="1000px" alt=""></div>
         </div>
 
 
